--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body>
   <h1>Brian Koome</h1>
   <p><strong>Role:</strong> Aspiring Tech Entrepreneur, AI Developer</p>
-  <p><strong>Skills:</strong> Python, Cybersecurity, Automation, Storytelling</p>
+  <p><strong>Skills:</strong> Python, Cybersecurity, Automation, Storytelling Web design and development
+  </p>
   <p><strong>Projects:</strong> Comrade Chat App, Don War Sci-Fi Novel</p>
   <p><strong>Contact:</strong> koome@email.com</p>
 </body>
